[package]
name = "rezz"
version = "0.1.0"
edition = "2021"
authors = ["Bunshock"]
description = "Discord music bot made for a Cyberpunk Red game as my character's DJ persona"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-model = "0.15"
twilight-http = "0.15"
twilight-gateway = "0.15"
twilight-cache-inmemory = "0.15"
twilight-lavalink = "0.15"
twilight-standby = "0.15"
twilight-util = {version = "0.15", features = ["builder"]}
tokio = {default-features = false, features = ["macros", "rt-multi-thread"], version = "1.26"}
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
dotenv = "0.15"
futures-util = "0.3"
futures = "0.3"
hyper = "0.14"
serde_json = "1.0"